<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAppBg"
        tools:context=".ui.activities.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:elevation="@dimen/_1sdp"
            android:layout_margin="@dimen/_44sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12"
            android:src="@drawable/ic_splash"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserName"
            style="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/enter_your_name"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/common_top_extra_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivAppIcon"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/enter_your_email_address"
            android:maxLength="100"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUserName"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/enter_your_password"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            style="@style/EditTextTheme"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/enter_your_password"
            android:maxLength="50"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSignUp"
            style="@style/ButtonTheme"
            android:text="@string/sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>